k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quiz-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quiz-db
  template:
    metadata:
      labels:
        app: quiz-db
    spec:
      containers:
        - name: postgres
          image: postgres
          volumeMounts:
            - mountPath: /docker-entrypoint-initdb.d
              name: init-script
      volumes:
        - name: init-script
          configMap:
            name: init-sql

---
apiVersion: v1
kind: Service
metadata:
  name: quiz-db
spec:
  selector:
    app: quiz-db
  ports:
    - port: 5432
      targetPort: 5432
