k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quiz-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quiz-frontend
  template:
    metadata:
      labels:
        app: quiz-frontend
    spec:
      containers:
        - name: frontend
          image: vaciooo/quiz-frontend:latest
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: quiz-frontend
spec:
  selector:
    app: quiz-frontend
  ports:
    - port: 80
      targetPort: 3000
  type: NodePort
